crates/codegen/xai-grok-pager/src/views/snapshots/xai_grok_pager__views__providers_modal__tests__chatgpt_openai_card_with_account_email.snap
---
source: crates/codegen/xai-grok-pager/src/views/providers_modal.rs
expression: rendered
---
               ┌─ Providers ─────────────────────────────────────────────────────────── [✗] ─┐
               │                                                                             │
               │  Configure model providers (gen 0). Keys are masked and never written to c  │
               │    xAI                                               [Key/connect missing]  │
               │      Grok/xAI account (OAuth) or xAI API key                                │
               │  › OpenAI                                             [         Connected]  │
               │      Connected with ChatGPT OAuth — user@example.com                        │
               │    OpenRouter                                        [Key/connect missing]  │
               │      Chat Completions · key stored securely                                 │
               │    Anthropic                                         [Key/connect missing]  │
               │      Messages API: Native Grok agent loop · x-api-key stored securely       │
               │  xAI/OpenAI: routes select OAuth or API key. Anthropic: Messages API key o  │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │    ↵ connect  |  c replace key  |  t test  |  d disconnect  |  r status     │
               │     e edit  |  a add  |  y/n enable  |  R retrieval  |  s subscription      │
               │                                  Esc close                                  │
               └─────────────────────────────────────────────────────────────────────────────┘
