crates/codegen/xai-grok-pager/src/views/snapshots/xai_grok_pager__views__providers_modal__tests__chatgpt_subscription_long_context_note.snap
---
source: crates/codegen/xai-grok-pager/src/views/providers_modal.rs
expression: editing
---
               ┌─ Providers ─────────────────────────────────────────────────────────── [✗] ─┐
               │                                                                             │
               │  ChatGPT subscription model overrides                                       │
               │  › GPT-5.6 Sol · 272000 tokens · compact @ 85%                              │
               │  Context window: 300000                                                     │
               │  Enter saves · x clear · Esc cancels · 8,000–1,050,000 tokens               │
               │  OpenAI may apply long-context limits or pricing to this subscription.      │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                                                                             │
               │                      ↵ save  |  x clear  |  Esc cancel                      │
               └─────────────────────────────────────────────────────────────────────────────┘
